# secureserver

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/files/: build-aarch64.sh  build-x86_64.sh  build.sh  package-lock.json  release.config.cjs
.github/workflows/: release.yml  rust.yml
src/: main.rs  physical.rs
