[package]
name = "secretsquirrel"
version = "2.0.0"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
libsql = { version = "0.6.0", features = ["encryption"] }
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.8.1"
aes = "0.8.4"
cbc = "0.1.2"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
